--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,14 @@
 .header{
 	
-	width:250px;
+	width:430px;
 	background-color:black;
 	color:orange;
 	margin-top:0;
+	height:50px;
+	font-size:30px;
+	text-align:center;
 }/*header*/
+
 .mainsection{
 	background-color:black;
 	color:orange;
@@ -27,7 +31,7 @@
 	height:100px;
 	width:90px;
 	padding-top:5px;
-	
+
 	
 	
 }/*score end*/
@@ -43,8 +47,8 @@
 
 
 img{
-	height:90px;
-	width:90px;
+	height:70px;
+	width:70px;
 	
 }/*crystal*/
 
